# crypto-data-pipeline

./: .gitignore  Dockerfile  Dockerfile_Agent  Dockerfile_Flows  README.md  pyproject.toml  requirements.txt  test_flow-deployment.yaml
.github/actions/container-image/: action.yml
.github/actions/deploy-container/: action.yml
.github/actions/deploy-container-to-compute-engine/: action.yml
.github/actions/deploy-flows/: action.yml
.github/workflows/: deploy-agent.yml  deploy-flows-and-blocks.yml
dbt/: dbt_project.yml
dbt/models/marts/core/: dim__coin_market_cap_exchange_history.sql  dim__coin_market_cap_exchange_history.yml
dbt/models/staging/landing/: src_landing.yml  stg_landing__coin_market_cap.sql  stg_landing__coin_market_cap.yml
src/: test_flow-deployment.yaml
src/sky-pipe/flows/: test_flow.py
src/sky_pipe/core/integrations/coin_market_cap/: main.py
src/sky_pipe/core/integrations/dbt/: main.py
src/sky_pipe/core/integrations/google_bigquery/: main.py
src/sky_pipe/core/integrations/google_cloud_storage/: main.py
src/sky_pipe/flows/: CoinMarketCap.py  test_flow.py
